# Computer-Graphics

./: .gitignore  Cargo.toml  README.md  maze.txt  maze2.txt  rubiks_cube_mac_m1_executable
Learn-Opengl/src/: lib.rs
Learn-Opengl/src/camera/: mod.rs
Learn-Opengl/src/gls/: gl_size.rs  mod.rs
Learn-Opengl/src/gls/buffers/: ebo.rs  framebuffer.rs  mod.rs  texture.rs
Learn-Opengl/src/gls/shader/: mod.rs  set_uniform.rs
Learn-Opengl/src/lights/: material.rs  mod.rs  point_lights.rs
Learn-Opengl/src/window/: mod.rs
maze/: Cargo.toml
maze/shader/: frag.glsl  lamp_frag.glsl  vert.glsl
maze/src/logic/: mod.rs
ray-tracer/: Cargo.toml
ray-tracer/src/: camera.rs  lib.rs  material.rs  vector_additon.rs
ray-tracer/src/image/: mod.rs
ray-tracer/src/ray/: hittable.rs  mod.rs
rubiks_cube/: Cargo.toml  README.md
rubiks_cube/shaders/: frag.glsl  vert.glsl
rubiks_cube/src/camera/: mod.rs
rubiks_cube/src/game_logic/: colors.rs  mod.rs
src/: lib.rs
src/camera/: mod.rs
src/gls/: buffers.rs  gl_size.rs
src/gls/buffers/: bindable.rs  ebo.rs  mod.rs  texture.rs
src/gls/shader/: mod.rs  set_uniform.rs
src/window/: mod.rs
