[package]
name = "rubiks_cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
learn-opengl = { path = "../Learn-Opengl" }
anyhow = "1.0.68"
gl = "0.10.0"
cgmath = "0.18.0"
glfw = "0.23.0"
rand = "0.8.5"
image = "0.24.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
